# manda-platform

./: .claude_settings.json  .gitignore  AGENTS.md  CLAUDE.md  M  MA_Information_Request_List.xlsx  README.md  test-irl-sample.csv
manda-processing/: .coverage  .coverage 2  .env.example  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  docker-compose.yaml  pyproject.toml
manda-processing/config/: models.yaml
manda-processing/docs/: parsers.md
manda-processing/scripts/: migrate_graphiti_group_ids.py  test_graphiti.py
manda-processing/src/: __init__.py  config.py  main.py
manda-processing/src/agents/: __init__.py  financial_analyst.py  knowledge_graph.py
manda-processing/src/api/: __init__.py  dependencies.py
manda-processing/src/embeddings/: __init__.py  openai_client.py  voyage_client.py
manda-processing/src/errors/: __init__.py  types.py
manda-processing/src/financial/: __init__.py  detector.py  extractor.py
manda-processing/src/graphiti/: __init__.py  chunk_retrieval.py  client.py  config.py  extraction_hints.py  ingestion.py  resolution.py  retrieval.py  semantic_retrieval.py
manda-processing/src/jobs/: __init__.py  __main__.py  errors.py  queue.py  retry_manager.py  worker.py
manda-processing/src/llm/: __init__.py  client.py  contradiction_detector.py  models.py  prompts.py  pydantic_agent.py  schemas.py
manda-processing/src/models/: __init__.py  financial_metrics.py  findings.py
manda-processing/src/neo4j/: __init__.py  chunk_schema.py
manda-processing/src/observability/: __init__.py  usage.py
manda-processing/src/parsers/: __init__.py  chunker.py  docling_parser.py  excel_parser.py  pdf_parser.py
manda-processing/src/reranking/: __init__.py  voyage.py
manda-processing/src/scripts/: __init__.py  backfill_neo4j.py  inspect_processing_quality.py
manda-processing/src/storage/: __init__.py  gcs_client.py  models.py  neo4j_client.py  neo4j_schema.py  supabase_client.py
manda-processing/tests/: __init__.py  conftest.py
(+1644 files in other folders)
